# serwo

./: CMakeLists.txt  package.xml
irp6_diagnostic_2/: CMakeLists.txt  package.xml
irp6_diagnostic_2/src/: Irp6Diagnostic_2.cpp  Irp6Diagnostic_2.h
irp6_mw_bringup/: CMakeLists.txt  package.xml
irp6_mw_bringup/config/: common-imports.ops  conv-inside-fun.ops  irp6-p-inside.ops  irp6p-conv-fun.ops
irp6_mw_bringup/launch/: conv-inside-fun.launch  irp6-conv-nohardware-fun.launch  irp6p-conv-hardware-fun.launch
irp_proste_ruchy/: irp_zdjecia_w_sekwencji_ruchu.py  irp_zdjecia_w_sekwencji_ruchu2.py  irp_zdjecia_w_sekwencji_ruchu3.py  irp_zdjecia_w_sekwencji_ruchu4.py  ruszanie_reczne_irp6ot_zdjecia.py  ruszanie_reczne_irp6p.py  sterowanie_predkoscia.py  tool.py
launch/: camera_diody.launch  camera_diody.launch~  camera_szachownica.launch  camera_szachownica.launch~
msg/: ErrorInfo.msg  SerwoInfo.msg
rviz/: wizualizacja_szachownicy.py
scripts/camera_simulation/: matrixOperations.py  object_seen_by_camera.py  object_seen_by_camera_in_rviz.py  object_seen_by_camera_y.py~
serwowizja/algorytmSerwowizji/: serwo.py
serwowizja/serwowizjaPionek/: serwo.py  serwo_centroid.py  serwo_centroid_krokowo.py
src/image_processing/: listener (kopia).cpp  listener.cpp
src/irp6_control/: irp6_control.cpp  irp6_control_nowe.cpp  irp6_control_stare (kopia).cpp  irp6_control_stare.cpp
src/object_symulation/: object_seen_by_camera.cpp
src/rviz/: conveyor_visualization.cpp  grid_visualization.cpp
src/y/: WIKI  grid_visualization_y.cpp  image_process_chessboard.cpp  image_process_chessboard_time.cpp  image_process_chessboard_time_old.cpp  image_process_diod.cpp  image_process_diod_time.cpp  irp6_serwo_y.cpp  irp6_serwo_y.cpp~  object_seen_by_camera_y.py  pozycja.py  predkosc.py  start (kopia).py~  start.py  start.py~  sterowanie_predkoscia2.py  stop.py  stop.py~  tool.py~
src/y/dzialanie_na_sprzecie_wyniki/rampa_fun/: fun.csv
src/y/dzialanie_na_sprzecie_wyniki/sin_fun/: fun.csv  info
src/y/inne/: image_process_chessboard_time_old.cpp  image_process_diod.cpp  image_process_diod_time.cpp  irp6_serwo_y.cpp
src/y/inne/Katalog bez nazwy/: irp6_serwo_y.cpp  irp6_serwo_y_old.cpp
symulacja/: plot_serwowizjaIRP6.py  publik.py  publisher_realHomogMatrix.py  publisher_realHomogMatrixincam.py  publisher_seeByIRP6HomogMatrix.py  serwowizjaIRP6.py  test.py  test.py~  wizualizacja_realGrid.py  wizualizacja_seeByIRP6.py
weryfikacja_matlab/: czasy_pnp.m  error.m  wykresStabilnosci.m
weryfikacja_matlab/czasy/: error_diody (kopia).txt  error_diody.txt  error_szach.txt  error_szach.txt~  pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/: pnp_time.txt~  recognition_time.txt~
weryfikacja_matlab/czasy_diody/czasy1/0/: pnp_time.txt  ros_orocos_delay.csv
weryfikacja_matlab/czasy_diody/czasy1/1/: Dokument bez nazwy  Dokument bez nazwy~  pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/10/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/11/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/12/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/13/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/14/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/15/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/16/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/17/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/18/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/19/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/2/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/20/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/21/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/22/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/23/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/24/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/25/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/26/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/27/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/28/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/29/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/3/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/30/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/31/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/32/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/33/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/34/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/czasy_diody/czasy1/35/: pnp_time.txt  recognition_time.txt
weryfikacja_matlab/dane/zdjecia1/: T_CW.txt  T_DC(szach).txt  T_DC_diod_nowy_algorytm.txt  T_DC_diod_stary_algorytm.txt  readme
weryfikacja_matlab/dane/zdjecia2/: T_CW  readme
weryfikacja_matlab/diody_czas_pojedyncze/: pnp_time.txt  recognition_time.txt  wyniki~
weryfikacja_matlab/inne/: czasy_hz.m  czasy_pnp.m  czasy_recognition.m
weryfikacja_matlab/sin_konfiguracje/sin_diody_53hz_86_gain4/: error.txt
weryfikacja_matlab/sin_konfiguracje/sin_diody_53hz_8_gain4/: error.txt
weryfikacja_matlab/sin_konfiguracje/sin_diody_8hz_86_gain4/: error.txt
weryfikacja_matlab/sin_konfiguracje/sin_diody_8hz_8_gain4/: robot_error.txt
weryfikacja_matlab/sin_konfiguracje/szach_diody_8hz_86_gain4/: error.txt  inf~
weryfikacja_matlab/szachownica_czas_pojedyncze/: pnp_time.txt  recognition_time.txt  wyniki~
weryfikacja_matlab_2/: rysuj.m  stabilnosc_katy.m
(+265 files in other folders)
